This is the completed 3.1 blog post
I added the necessary images and topics required and pertaining to the material at hand.

--- a/sesserh/index.html
+++ b/sesserh/index.html
@@ -227,7 +227,68 @@
          <!-- Module 2.3 Blog Post Starts here -->
 
          <!-- Module 3.1 Blog Post Starts here -->
+ <h2 class="blog-heading">Designing Flow: How Interface Logic Shapes User Behavior</h2>
 
+  <article class="blog-content">
+    <p>Have you ever clicked the wrong button on a website because it looked more important than the one you actually needed? Or abandoned a form halfway through because it didn’t give you any feedback? These aren’t just annoyances—they’re examples of how interface logic can either support or sabotage user experience. The way designers organize content, style buttons, provide feedback, and structure layouts has a massive impact on how people move through digital spaces. In this post, I’ll explore how these choices influence behavior, referencing three key UX laws and personal experiences—both positive and painful—to show why interface design matters more than ever.</p>
+
+    <h3>Learning Made Easy: Duolingo’s Friendly Flow</h3>
+    <p>Duolingo is a language learning app that excels in intuitive interaction and visual clarity. It’s colorful, friendly, and incredibly easy to navigate, even for first-time users. What makes it so effective is the way it gently guides the user through lessons using layout, feedback, and gamified elements. Each lesson appears as a large, tappable circle that progresses vertically, helping users intuitively move from one concept to the next. The interface never demands cognitive strain—everything feels like a natural step forward.</p>
+
+    <p>What’s brilliant here is the use of the <b>Aesthetic–Usability Effect</b> (Lidwell, Holden, & Butler, 2010). Duolingo’s bright color palette and minimalist shapes make it look simple and welcoming, even when the tasks involve complex grammar. This aesthetic friendliness makes users more forgiving when the app falters. For instance, if you accidentally choose the wrong answer, the app immediately responds with a subtle animation, color change, and a cheerful tone. Instead of discouraging you, the app motivates you to try again.</p>
+
+    <figure>
+      <img src="duolingo_13-e1679458068558-1024x678.png" alt="Duolingo interface showing feedback" />
+      <figcaption>Duolingo’s friendly visual hierarchy supports continuous learning.</figcaption>
+    </figure>
+
+    <p>The app also uses the <b>Von Restorff Effect</b> to guide behavior. Key actions, such as “Start,” “Check,” or “Next,” are always brightly colored—typically green—making them stand out against muted backgrounds. This contrast ensures that users never struggle to find the next step. Even icons like hearts for lives or stars for bonuses are visually prioritized, reinforcing goals and rewards.</p>
+
+    <p>Duolingo excels in feedback as well. If you answer correctly, you get a green highlight and a soft confirmation chime. If incorrect, you’re told why and shown the correct answer with a clear, friendly tone. These feedback loops are immediate and informative, which reduces uncertainty and keeps the experience flowing. This kind of micro-interaction design transforms an educational app into something playful and rewarding (Budiu, 2022).</p>
+
+    <h3>When Interfaces Fail: A DMV Horror Story</h3>
+    <p>On the opposite end of the spectrum is my recent experience with a state DMV website while trying to renew my driver’s license. The homepage was a cluttered mess—dozens of menu items, confusing categories, banner announcements, and even a scrolling news ticker (in 2025!). It was like stepping into a time machine that forgot what usability meant. I wasn’t sure where to click or how many steps the process would take.</p>
+
+    <p>Key functions like “License Renewal” weren’t even labeled clearly. Instead, they were buried under “Driver Services,” which opened a submenu of unrelated links. I had to scan everything line-by-line to find the correct action. This completely ignored the <b>Von Restorff Effect</b>, as nothing stood out. Every button looked the same. Important and unimportant actions were presented with equal visual weight. I felt overwhelmed before I even started.</p>
+
+    <figure>
+      <img src="Confusing Dmv website.png" alt="Confusing DMV website layout" />
+      <figcaption>A visually cluttered interface with no visual hierarchy or clear actions.</figcaption>
+    </figure>
+
+    <p>To make matters worse, when I finally located the form and entered my ID number—with dashes—the page just refreshed without explanation. No error message, no feedback. I tried again without the dashes, and it worked. This failure to be flexible violates <b>Postel’s Law</b>, which says systems should be liberal in what they accept from users and strict in what they output (Babich, 2020). A forgiving interface would have either stripped the dashes automatically or informed me they weren’t allowed. Instead, I had to guess—and that eroded my trust in the site.</p>
+
+    <p>There was also no feedback after submitting the form. The page just went blank for a moment before returning to the homepage. Did it go through? Was there an error? Without a success message or visual cue, I wasn’t sure whether to refresh, try again, or wait for an email. This absence of feedback creates uncertainty and frustration—two things no user should ever feel when trying to complete a basic online task.</p>
+
+    <h3>Key UX Laws at Work</h3>
+    <p>The contrast between these two experiences helps highlight just how essential good interface logic is. Duolingo follows principles that ease cognitive load, reward user input, and emphasize what matters. The DMV site ignores these principles, creating a maze of ambiguity and unnecessary complexity.</p>
+
+    <p><b>The Aesthetic–Usability Effect</b> shows us that users are more likely to trust and tolerate visually pleasing systems (Lidwell et al., 2010). A cheerful, inviting interface softens negative moments, while a cluttered or outdated one increases friction—even if it’s technically functional.</p>
+
+    <p><b>The Von Restorff Effect</b> reminds designers to use contrast intentionally. Without visual hierarchy, users don’t know where to look or what to do next. In digital spaces, time is precious and confusion costs clicks.</p>
+
+    <p><b>Postel’s Law</b> is a technical principle with major UX implications. A forgiving interface that interprets user input flexibly—whether it’s dashes in a number or mixed capital letters—creates confidence. A rigid system without clear messages creates anxiety and failure.</p>
+
+    <figure>
+      <img src="Postels law example.png" alt="Visual representation of Postel's Law in UI design" />
+      <figcaption>Postel’s Law: Accept user input liberally, handle errors gracefully.</figcaption>
+    </figure>
+
+    <h3>Conclusion: Design as Experience</h3>
+    <p>Interface logic isn’t just about pretty buttons or trendy layouts—it’s about guiding users with care and purpose. Every choice, from padding around a button to how errors are displayed, contributes to the overall experience. Good design feels invisible—it supports our behavior, builds confidence, and makes digital tools feel natural to use. Bad design gets in the way, slows us down, and makes us feel dumb or lost.</p>
+
+    <p>Whether you’re creating an app like Duolingo or maintaining a government website, you’re shaping a journey. That journey should be clear, forgiving, and rewarding. And with the help of UX principles like the Aesthetic–Usability Effect, the Von Restorff Effect, and Postel’s Law, designers can ensure that users not only succeed—but enjoy the process too.</p>
+  </article>
+
+  <footer class="sources">
+    <h4>References</h4>
+    <ul>
+      <li>Babich, N. (2020). <i>Postel’s Law and forgiving interfaces</i>. UX Planet. <a href="https://uxplanet.org/postels-law-and-forgiving-interfaces-95508ccf60db" target="_blank">https://uxplanet.org/postels-law-and-forgiving-interfaces-95508ccf60db</a></li>
+      <li>Budiu, R. (2022). <i>Designing with the mind in mind</i> (3rd ed.). Morgan Kaufmann.</li>
+      <li>Lidwell, W., Holden, K., & Butler, J. (2010). <i>Universal principles of design</i>. Rockport Publishers.</li>
+      <li>Norman, D. A. (2013). <i>The design of everyday things</i> (Revised and expanded ed.). Basic Books.</li>
+    </ul>
+  </footer>
          <!-- Module 3.2 Blog Post Starts here -->
 
       </main>
