Module 3.1 post uploaded
Content and CSS updates/uploads

--- a/gongoraleyvae/index.html
+++ b/gongoraleyvae/index.html
@@ -141,6 +141,44 @@
          <!-- Module 2.3 Blog Post Starts here -->
 
          <!-- Module 3.1 Blog Post Starts here -->
+         <article>
+            <header class="article-header">
+               <h2>Module 3.1 Blog Post</h2>
+            </header>
+            <h3>How Interface Logic Shapes Our Interactions</h3>
+            <p>In our increasingly digitized world, every tap, swipe, and click is a dialogue with a meticulously designed interface. From the apps on our smartphones to the complex dashboards we use for work, the way these digital environments are structured, their interface logic, profoundly shapes our perceptions, behaviors, and overall user experience. It's a silent language, often unnoticed when effective, but frustrating when weak. Understanding these underlying principles is crucial for appreciating why some digital interactions feel intuitive and effortless, while others might lead to confusion.</p>
+            <h3>Guiding User Behavior with Layouts and Control</h3>
+            <p>The immediate impression an interface makes is often determined by its layout and the design of its controls. A well-organized layout provides a clear visual hierarchy, guiding the user's eye to the most important elements and actions (Sajeeb, 2023). This hierarchy is not accidental, it leverages our natural tendency to focus on elements with higher visual prominence, achieved through strategic use of size, color, and placement. A button that looks like it can be pressed, a link that appears clickable, or a scrollbar indicating more content below are all examples of effective controls that reduce cognitive load and facilitate seamless interaction.
+Conversely, a cluttered interface, or one with ambiguous controls, can quickly overwhelm users. As Johnson highlights in Designing with the Mind in Mind, humans have a limited capacity for conscious thought and attention, often struggling with "novel actions" and "problem-solving" (Johnson, 2020). If an interface forces users to deduce how to interact with it, it shifts the burden from the automatic, intuitive "System 1" processing to the slower, more effortful "System 2" (Johnson, 2020). This increased cognitive load leads to frustration and can even cause users to abandon a task altogether (Sajeeb, 2023)
+The design of controls also plays a critical role. Consider the difference between a simple "on/off" toggle switch and a complex dropdown menu with dozens of options. The former offers a clear, binary choice, minimizing the time it takes to make a decision, a concept related to Hick's Law (Sajeeb, 2023). The latter, while offering more flexibility, can lead to "choice paralysis" if not managed carefully. Effective control design aligns with how users naturally think about tasks, making interactions feel like an extension of their intent rather than a puzzle to be solved. This reduces the "Gulf of Execution", the gap between a user's goal and the actions required to achieve it within the interface (Johnson, 2020).</p>
+         <figure>
+            <img src="https://images.unsplash.com/photo-1712903892043-f6657b6ba472?q=80&w=2744&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="Person browsing a social wall and voting on a live poll using a tablet"
+            width="400">
+            ><figcaption>
+               "<em>Person browsing a social wall on a tablet and voting on a live poll</em>"by
+               <a href="https://unsplash.com/@walls_io" target="_blank">Walls.io</a> is licensed underlying
+               <a href="https://unsplash.com/license" target="_blank">Unsplash License</a>
+            </figcaption>
+         </figure>
+            <h3>When Design Creates Unnecessary Cognitive Load</h3>
+            <p>Chan describes how some e-commerce sites automatically add shipping insurance to shopping carts, "Nomad Lane automatically adds shipping insurance to the total cost when users check out. Users must, first, notice this additional cost and second, actively opt out of shipping insurance. Automatic shipping insurance is not part of users' shopping cart mental model, so this leads to frustration"(Chan, 2024). This design pattern violates users mental models of how shopping carts work. In physical stores, items only enter our carts when we place them there. When digital interfaces break this model, they create confusion and erode trust. Another example from Chan shows how multiple search boxes on a single page create unnecessary complexity. "When a website has several search features on the same page, users often get confused. They'll enter their query in the wrong box and assume that the site doesn't have the answer if nothing comes back" (Chan, 2024). Each additional search box increases cognitive load, requiring users to evaluate which search function applies to their needs, a task that consumes working memory resources.<img src="sonny-diaz-3sdC7_PX1Sc-unsplash.jpg" alt="The chaotic arrangement of shapes visually represents the unnecessary cognitive load created by poorly designed interfaces that deviate from users' mental models and introduce complexity."></p>
+            <h3>Tesler's Law</h3>
+            <p>Yablonski introduces us to Tesler's Law, also known as the law of conservation of complexity, "For any system there is a certain amount of complexity that cannot be reduced—it can only be transferred between the system and its users" (Yablonski, 2024). This principle highlights a fundamental design responsibility, ensure that complexity is handled by the system rather than burdening users. When designers fail to address inherent complexity, they force users to compensate with additional cognitive effort. Consider password requirements. A system that simply rejects passwords without explanation transfers complexity to users. A better approach absorbs this complexity by providing clear feedback about requirements and suggestions for improvement.</p>
+            <h3>Principles from Designing with the Mind in Mind</h3>
+            <p>Johnson emphasizes that recognition is significantly easier than recall for humans, recognition is essentially perception working with long-term memory “See and choose” is better than “recall and type” the basis of GUI interfaces (Johnson, 2020). This cognitive difference explains why well-designed navigation menus outperform command-line interfaces for most users. By making options visible and recognizable, interfaces reduce the cognitive load of remembering commands. Another key principle from Johnson is that reading is an artificial skill requiring systematic instruction "Reading is an artificial skill requiring systematic instruction, like playing a musical instrument. Many people never become proficient readers due to inadequate education or cognitive impairments" (Johnson, 2020). This insight has profound implications for interface design. When text presentation is poor using unusual typefaces, ALL CAPS, tiny fonts, poor contrast, or centered alignment, it disrupts our already taxing reading processes. The principle leads to an important recommendation "Dramatically reduce text content - most users won't read it anyway" (Johnson, 2020). Interfaces should minimize reading requirements and optimize text presentation for both skilled and less-skilled readers.</p>
+            <h3>Conclusion</h3>
+            <p>Creating truly usable interfaces requires designers to work with and not against human cognitive limitations. By understanding how memory works, respecting mental models, maintaining consistency, and providing appropriate feedback, we can develop digital experiences that feel natural and intuitive. The most elegant interfaces aren't those with the most features or the flashiest designs, they're the ones that place the least burden on our limited cognitive resources, allowing us to focus on our goals rather than the interface itself.</p>
+            <footer class="article-footer">
+                <h3>Sources:</h3>
+                <ol>
+                  <li>Chan, M. (2024, January 26). Mental Models. Nielsen Norman Group.</li>
+                  <li>Fibery Staff. (2024, March 27). A Product Manager's Guide to User Interface Feedback. Fibery.</li>
+                  <li>Yablonski, J. (2024). Laws of UX: Using Psychology to Design Better Products & Services. O'Reilly Media.</li>
+                  <li>Johnson, J. (2020). Designing with the Mind in Mind: Simple Guide to Understanding User Interface Design Guidelines.</li>
+                </ol>
+            </footer>
+         </article>
 
          <!-- Module 3.2 Blog Post Starts here -->
 
