finished the writing part of Module 3.1 working on the CSS

--- a/furuci/index.html
+++ b/furuci/index.html
@@ -273,10 +273,62 @@
                <li>Yablonski, J. (2024).<em>Laws of UX (2nd ed.).</em> O'Reilly Media, Inc.. <a href="https://cwu.vitalsource.com/books/9781098146924"/> Assigned Reading Number Two </a></li>
             </ol>
 
+            </footer> 
+
+         </article> 
+
          <!-- Module 2.3 Blog Post Starts here -->
 
          <!-- Module 3.1 Blog Post Starts here -->
+         <article>
+            <header class="article-header">
+               <h2>Module 2.1 Blog Post</h2>
+            </header>
+   <h3>Introduction</h3> 
+   <p>When one investigates what to buy on Amazon and there are a variety of the same product but; one would choose which one they prefer based on how it looks. And the same goes for what apps to download, what products to choose over the other as well as which one has more superior design over the competitor. Not only this but also, how designs impact how one feels and how they resonate with the UI. On top of that, the impact of some UX Laws creates an effect on the customers and the engagement the design gets. This will go more in depth throughout this blog.</p>  
 
+   <h3>User Design Impact on Behavior</h3>  
+   <p>Going into the behavior side of User Design, a huge factor that goes into this is how the design looks and how it’s visibly aesthetic. According to <em>“Psychology of Color in UI Design: How to Influence User Behavior”</em> Grivet explains “The psychology of color is the study of how different colors affect human emotions and behaviors. Colors can evoke various feelings—ranging from calmness and trust to urgency and excitement. By tapping into these emotional responses, designers can create more intuitive and persuasive user interfaces.” This explains that the colors and how an interface looks instantly trigger behaviors on how the body reacts to it emotionally, physically and mentally. Some examples of colors that the article listed I will go more in depth with is Orange, Blue and White.</p>  
+
+<dl>
+      <dt>Orange:</dt><dd> enthusiasm, creativity, friendliness and warmth.</dd> 
+
+      <dt>Blue:</dt><dd> trust, calmness, reliability and professionalism</dd> 
+
+      <dt>White:</dt><dd> cleanliness, simplicity, purity and openness</dd>
+
+</dl>
+
+   <P>Moreover, these specific colors are mentioned in many known apps such as, Ulta, TEMU, GOOGLE, Facebook and more. For Orange, many shopping apps like Ulta <img src="ulta logo.jpg"> alt="Ulta Logo"</img> they use this color to show friendliness and enthusiasm to reel customers in and get positive behavior towards their brand. This is important customers are important to keep any business going. In order for habits to form (shopping for this example) one needs to be intrigued by the appearance of the UI design to even start the habit in the first place. For Blue, using the example of Facebook<img src="facebook logo.png"> alt="Facebook Logo" it’s a social media platform is for all genres of media (moreover on the modest side) the company wants to give off more of an calmness, professional behavior to reel customers in. With the clean design of the contrast of the blue and white F this intrigues the consumers to download the app. Lastly, for white we will use the example of Google <img src="google logo.png"> alt= "Google Logo". This search engine has an white background which gives a contrast of multiple colors to attract multiple demographics. Not only this but, white has the impression of simplicity and openess which gives the impression of being a reliable source to search for anything one needs. This explains how first impressions based on how the User Interface looks can make a huge difference on how the customer will behave toward the product/website/app/etc.</P>  
+
+   <h3>Impact of the Aesthetic–Usability Effect, Von Restorff Effect, Postel’s Law</h3> 
+   <p>Transitioning this topic into the UX Laws, there are many factors on how UI design creates behavior changes but also, biases, decisions and judgement. Starting off with Aesthetic-Usability Effect it’s basically going over how aesthetic a User Interface got to be in order for more consumers to use the product (very similar to the previous paragraph). According to <em>“Laws of UX”</em> Yablonski describes the law as “That’s not to say good design can’t also be attractive design. In fact, an aesthetically pleasing design can influence usability. Not only does it create a positive emotional response, but it also enhances our cognitive abilities, increases the perception of usability, and extends credibility (28).” For example; when it comes to Instagram's new logo compared to the old one it has more of a modern approach and more colorful to create a more visible aesthetic to attractive more engagement and consumers. Another quote from the textbook I would like to go over is “Color, shape, size, position, and motion are all factors that come into play in directing the attention of users, and we must carefully consider each of these when building interfaces (28).” Connecting this to the design challenge concept of my smart speaker is the color contrasts, how the banners are shaped, specific fonts and how apps function is a huge factor to positive and/or negative feedback one gets.</p> 
+
+   <p>Next up will be Von-Restorff Effect.  What this effect goes over is how it’s important for a user design to be memorable and grab the attention of the user quickly. According to <em>“UX Laws”</em> the author says, “We can identify objects in fractions of a second, we possess superior pattern processing capabilities in comparison to other living things, and we have an innate ability to spot small differences in objects (32).” This shows how standing out from the competitors is important in order for products to be sold. Additionally, with a User Design perspective it’s good to have a design that stands out and is rememberable, so the consumer is more likely to use the platform. An example of this would be Sephora’s logo of the black and white stripe design that’s vertical; not only is this unique but also noticeable for consumers to know what the store. As well as what the app entails in regards of the company.</p>  
+
+   <p>Lastly, we’ll go over what Postel’s Law is. What Postel’s Law is about is the connection of human sympathy within the User Design. According to <em>“UX Laws”</em> the author describes it as “Postel’s law describes an approach to design that’s more akin to the philosophy of human–computer interaction: we should anticipate virtually anything in terms of input, access, and capability while providing a reliable and accessible interface (20).” This explains how it’s important to have human like responses to show off that the user design is legit and very accessible for all consumers. To connect this concept with Artificial Intelligence, not only is it easy to access and it gains that interaction to help wherever they need it. Another example would be the Wellington Customer Service messenger when entering the CWU website, it gives the human computer interaction while also being reliable due to it being connected to a public website. All in all, UX Laws are important to be present in User Design decisions especially when it comes to engaging your audience.</p>  
+
+   <h3>Personal Experience with Interface Logic</h3> 
+   <p>Furthermore, we’ll go into my experience when it comes to my thoughts on user interfaces. When it comes to more complicated logos and websites I tend to get confused and zone out due to too much happening at once. On top of that, if there are too many colors and they are not cohesive, I tend to stay away from the interface. Especially when there are banner pop ups I instantly click off because it gives off more of a negative behavior/reaction. On the other hand, I love interfaces that have a simple yet fun color palette for their user design. It’s welcoming but, also not all at your face. In my personal opinion, the simpler it is the better in any type of interface. In my experience, when I do research for a article and source for an essay if there are too many pop ups and ads, I get banner selective attention to avoid them at all costs. Growing up, we were taught to avoid them because they aren’t as trustworthy sources in comparison as databases and .org websites. This explains how picky I am with articles to use for my projects for school.</p>  
+
+   <h3>Designing with the Mind in Mind's Impact</h3> 
+   <p>Connecting all of this with some quotes from <em>“Designing with the Mind in Mind”</em> that seem relevant to the topic at hand. Jeff Johnson goes over “experiences from our own lives or those of relatives and friends influ-ence our conclusions more than experiences we read or hear about (161).” This explains how past experience also influences how one interprets opinions and judgements on how user designs look to them. Additionally, it gains biases of what the consumers like compared to other interfaces. Another quote I would like to go over is “operating system two requires conscious will and mental effort, while system one is always running in the background and requires no conscious effort.” This shows how one's brain is constantly moving and how it can easily determine if the design is worth going over or just brushing it off like a cold shoulder. In other words, if a app doesn't look pleasing at first glance then the person are highly likely not even going to click on the platform. All in all, first impressions are important to get a consumer hooked onto the interface.</p>  
+
+   <h3>Conclusion</h3>  
+   <p>To sum this all up, User Design has a huge influence in many ways; first impressions, attention grabbing and so much more. We humans take in so much information at once that we can determine whether or not something is good in our eyes within a seconed. Connecting this to UX Laws and Designing with the Mind in Mind; design aesthetics, appearances and positive feedback consumers are more likely to gravitate towards it if the interface has all these components. Be abstract but, not too much that it's too loud instead, be simple yet unique to stand out of the croud when it comes to UI designs.</p>
+
+      <h3>Sources</h3>
+
+      <ol> 
+         <li>Grivet, A. (2024, September 12).<em> The Psychology of Color in UI Design: How to Influence User Behavior.</em> BeanMachine. <a href="https://beanmachine.dev/psychology-of-color-in-ui-design/"> Outside Reading Number One</a></li> 
+
+         <li> Johnson, J. (2020). <em> Designing with the Mind in Mind (3rd ed.).</em>Elsevier S & T. <a href="https://cwu.vitalsource.com/books/9780128182031"/> Assigned Reading Number One </a></li>  
+
+         <li><em>What is Behavioral Design?</em> (2024, January 29). The Interaction Design Foundation.<a href="https://www.interaction-design.org/literature/topics/behavioral-design"> Outside Reading Number Two </a></li>
+
+         <li>Yablonski, J. (2024).<em>Laws of UX (2nd ed.).</em> O'Reilly Media, Inc.. <a href="https://cwu.vitalsource.com/books/9781098146924"/> Assigned Reading Number Two </a></li> 
+
+    
          <!-- Module 3.2 Blog Post Starts here -->
 
       </main>
@@ -286,3 +338,5 @@
       </footer>
    </body>
 </html>
+
+  <!-- Module 3.2 Blog Post Starts here -->
