--- a/ahmedf/index.html
+++ b/ahmedf/index.html
@@ -496,6 +496,111 @@
          <!-- Module 2.3 Blog Post Starts here -->
 
          <!-- Module 3.1 Blog Post Starts here -->
+          <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Moving Through Design</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 40px;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    h1, h2 {
+      color: #2c3e50;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+      margin: 20px 0;
+      border-radius: 10px;
+    }
+    blockquote {
+      font-style: italic;
+      margin: 20px;
+      padding-left: 20px;
+      border-left: 4px solid #ccc;
+    }
+    .source {
+      font-size: 0.9em;
+      margin-top: 40px;
+      color: #555;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>Moving Through Design: How Visual and Interaction Choices Influence User Experience</h1>
+
+  <p>In this time of digital design, every aspect of a screen has a purpose. Whether users are exploring an app, navigating a website, or checking out a product page, the visual and interaction design decisions made by designers are typically invisible guides that influence our experience, behavior, and expectations.</p>
+
+  <p>Good design doesnt just make something look attractive, it shapes how users think, what they notice, and how easily they can finish tasks.</p>
+
+  <h2>Layout and Control Design:</h2>
+  <p>Layout and control design act as masked signposts that either smooth or mess with a users journey. A clean, logical layout helps users know whats important and where to go next. Conversely, a cluttered or confusing layout can raise cognitive load, frustrate users, and lead to abandonment.</p>
+
+  <blockquote>
+    “The principle of Proximity is that the relative distance between objects in a display affects our perception of whether and how the objects are organized into subgroups.” Johnson, 2020
+  </blockquote>
+
+  <p>Likewise, the design of interactive elements (buttons, sliders, input fields) affects user flow. Buttons must look clickable; forms must guide completion with visual cues like progressive disclosure.</p>
+
+  <img src="https://plus.unsplash.com/premium_photo-1720192861639-1524439fc166?q=80&w=2340&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Gears on laptop screen">
+
+  <h2>UX Laws in Action</h2>
+
+  <h3>1. Aesthetic Usability Effect</h3>
+  <p>Users are more prone to tolerate minor usability problems if an interface is aesthetically pleasing.</p>
+
+  <blockquote>
+    “If we are looking on a Web site for a campus map, our eyes and pointer-controlling hand are attracted to anything that might lead us to that goal.” Johnson, 2020
+  </blockquote>
+
+  <p>A gentle animation, polished color scheme, and readable typography can go a far way in making users feel secure and confident.</p>
+
+  <h3>2. Von Restorff Effect</h3>
+  <p>The Von Restorff Effect, also called the isolation effect, explains that users will notice and remember the item thats unique from a group.</p>
+
+  <img src="https://plus.unsplash.com/premium_photo-1683288662040-5ca51d0880b2?q=80&w=2274&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Computer screen with checkmark showing a successful action" style="max-width: 100%; height: auto;">
+
+  <blockquote>
+    “Overuse of strong attention-getting methods can cause important messages to be blocked by habituation.” Yablonski, 2020
+  </blockquote>
+
+  <h3>3. Postels Law</h3>
+  <p>Interfaces should be forgiving, accepting a span of user inputs, and recovering generously from errors.</p>
+
+  <p>Whether its pardoning input fields or automatically saving progress, these helpful designs respect the user's imperfection and make the experience more human.</p>
+
+  <h2>A Personal Experience with Interface Logic</h2>
+  <p>One of the most upsetting user experiences Ive had was with an airlines mobile app. The interface looked clean but lacked consistency, clarity, and proper error handling.</p>
+
+  <p>By contrast, Khan Academys app offers smooth interaction flow, feedback, and minimal cognitive load.</p>
+
+  <img src="https://plus.unsplash.com/premium_photo-1678565999332-1cde462f7b24?q=80&w=2340&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Computer screen with code">
+
+  <h2>Overall Conclusion: Design is a Conversation</h2>
+  <p>Good interaction and visual design arent just for aesthetic purposes, theyre a dialogue with the user. They influence expectations, emotions, and behavior.</p>
+
+  <p>When design works with the mind, rather than against it, we all move forward a little more smoothly.</p>
+
+  <h3>Is this helping the user thrive?</h3>
+
+  <div class="source">
+    <strong>Sources:</strong><br>
+    Johnson, J. (2020). Designing with the Mind in Mind (3rd ed.). Morgan Kaufmann.<br>
+    Yablonski, J. (2020). Laws of UX (2nd ed.). OReilly Media, Inc.<br>
+    Wroblewski, L. (2008). Web Form Design: Filling in the Blanks. Rosenfeld Media.<br>
+    22 Basic UX Laws That Every Designer Should Know <li>https://www.shopify.com/partners/blog/ux-laws</li>
+  </div>
+
+</body>
+</html>
+
 
          <!-- Module 3.2 Blog Post Starts here -->
 
