--- a/ahmedf/index.html
+++ b/ahmedf/index.html
@@ -157,7 +157,7 @@
           <header class="article-header">
          <h1>Designing for the Long Haul: Understanding the Systems Engineering Life Cycle</h1>
         </header>
-        <p>In our digital world, systems are not static tools anymore, they are dynamic ecosystems. Whether we're building healthcare websites, military communication systems, or intelligent automation tools, the goal is no longer just to create functioning software but to engineer systems that can progress, scale, and endure. This is where the Systems Engineering Life Cycle becomes necessary.</p>
+        <p>In our digital world, systems arent static tools anymore, they are dynamic ecosystems. Whether we're building healthcare websites, military communication systems, or intelligent automation tools, the goal is no longer just to create functioning software but to engineer systems that can progress, scale, and endure. This is where the Systems Engineering Life Cycle becomes necessary.</p>
    
      <p>At the center of systems engineering is the belief that every system has a life cycle, a beginning, middle, and end. “Systems engineering consists of two significant disciplines: the technical knowledge domain in which the systems engineer operates, and systems engineering management (Systems engineering fundamentals, 2001).” Managing this life responsibly means implementing structured thinking from launch to retirement. In this essay, I will explore what the Systems Development Life Cycle (SDLC) is, unload the characteristics, strengths, and weaknesses of linear, iterative, and incremental life cycle models, and clarify why adopting a life cycle mindset is crucial for sustainable system design and long-term digital innovation.</p>
    
