--- a/durhamj/redesign/blog-pages/blog-2-2.html
+++ b/durhamj/redesign/blog-pages/blog-2-2.html
@@ -4,12 +4,24 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="css/styles.css" rel="stylesheet">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <title>Student Name | Portfolio</title>
    </head>
-   <body>
-<!-- Page Header  -->
-      <header class="page-header">
-         <h1>Portfolio</h1>
+   <body class="page-container">
+      <!-- Page Header  -->
+      <header class="page-header mobile-menu">
+         <h1>DEV/BLOG</h1>
+         <nav id="main-nav">
+            <a href="../index.html">Technology</a>
+            <a href="#">Culture</a>
+            <a href="#">Lifestyle</a>
+            <a href="#">People</a>
+            <a href="#">About</a>
+            <a href="#">Subscribe</a>
+         </nav>
+         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+          </a>
       </header>
 <!-- Main Content Area  -->
       <main>
