--- a/durhamj/redesign/blog-pages/blog-3-2.html
+++ b/durhamj/redesign/blog-pages/blog-3-2.html
@@ -33,12 +33,16 @@
             <h3>Health Cronut la Croix</h3>
             <p>I'm baby photo booth fingerstache af enamel pin quinoa. Portland unicorn keytar paleo letterpress banjo kinfolk. Pitchfork four loko meditation, locavore marfa af listicle sriracha helvetica cred vexillologist PBR&B. Pop-up hexagon thundercats master cleanse before they sold out, fashion axe copper mug yes plz literally cred mukbang chia gluten-free. Bodega boys skateboard ugh green juice.</p>
             <p>Cronut raclette cornhole actually JOMO vinyl master cleanse tonx. Blackbird spyplane flexitarian hoodie small batch, art party mixtape vibecession next level pabst twee. Chillwave JOMO coloring book drinking vinegar, blue bottle cronut vice gorpcore helvetica.</p>
+            <div class="flex-list">
+               <dl>
+                  <dt>fixie mug</dt>
+                  <dd>fashion axe copper mug yes plz literally cred mukbang chia gluten-free. Bodega boys skateboard ugh green juice</dd>
+               </dl>
             <dl>
-               <dt>fixie mug</dt>
-               <dd>fashion axe copper mug yes plz literally cred mukbang chia gluten-free. Bodega boys skateboard ugh green juice</dd>
                <dt>vexillologist</dt>
                <dd>semiotics hella salvia kickstarter jean shorts</dd>
             </dl>
+            </div>
             <p>Hella marxism succulents mumblecore forage kale chips bespoke fixie shoreditch chartreuse tofu before they sold out. Fixie mug salvia selfies. Tbh godard man bun pun vape schlitz ennui yes plz literally. Cred.</p>
             <div class="image-bar">
                <figure>
