updated demo and example files.

--- a/durhamj/demo/index.html
+++ b/durhamj/demo/index.html
@@ -76,15 +76,13 @@
 
         }
 
-     
+        .small-box-2 {
 
-.small-box-2 {
+            background-color: #C4F1BE;
+            width:64px;
+            height:64px;
 
-background-color: #C4F1BE;
-width:64px;
-height:64px;
-
-}
+        }
 
 
     </style>
@@ -95,7 +93,8 @@ height:64px;
      <h2>Code to Copy</h2>
      <h3>Fonts</h3>
     <p>@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');</p>
-    <a href="code-demo.html">demo code</a>
+    <h3>HTML</h3>
+    <p><a href="code-demo.html">demo code</a></p>
     
     <h3>Color Codes</h3>
     <div class="color-box-group">
