--- a/durhamj/redesign/blog-pages/blog-3-2.html
+++ b/durhamj/redesign/blog-pages/blog-3-2.html
@@ -43,7 +43,7 @@
                <dd>semiotics hella salvia kickstarter jean shorts</dd>
             </dl>
             </div>
-            <p>Hella marxism succulents mumblecore forage kale chips bespoke fixie shoreditch chartreuse tofu before they sold out. Fixie mug salvia selfies. Tbh godard man bun pun vape schlitz ennui yes plz literally. Cred.</p>
+            <p>Hella marxism succulents mumblecore forage kale chips bespoke fixie shoreditch chartreuse tofu before they sold out. Fixie mug salvia selfies. Tbh godard man bun pun vape schlitz ennui yes plz literally. Gluten-free gorpcore farm-to-table try-hard vaporware bitters retro, flexitarian poutine woke salvia neutra mlkshk flannel roof party. Activated charcoal post-ironic Brooklyn leggings hoodie actually marxism farm-to-table vibecession. Same locavore meggings unicorn, banjo iPhone cupping yuccie grailed four loko squid wayfarers XOXO whatever plaid. Cardigan freegan pinterest edison bulb pour-over kitsch. Synth kogi lyft food truck readymade distillery. Aesthetic same pinterest green juice.</p>
             <div class="image-bar">
                <figure>
                   <img src="../images/fixie-mug.jpg" alt="a red mug with a silly face">
